# Research-Paper-Agentic-AI-Project

./: main.py  pyproject.toml  requirements.txt
notebook/: test.ipynb
research_and_analyst/config/: configuration.yaml
research_and_analyst/utils/: model_loader.py
