[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "wikipedia>=1.4.0",
    "yfinance>=1.2.0",
    "youtube-search>=2.2.0",
    "youtube-search-python>=1.6.6",
]
